added json default, and active model serializer support

--- a/dorah-api/Gemfile
+++ b/dorah-api/Gemfile
@@ -40,4 +40,4 @@ gem 'pry-rails',     group: :development
 # Use debugger
 # gem 'debugger', group: [:development, :test]
 gem 'devise'
-
+gem 'active_model_serializers'
